--- a/html/login.html
+++ b/html/login.html
@@ -4,38 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cửa Hàng Truyện Tranh</title>
+    <title>Du lịch</title>
     <link rel="stylesheet" href="../css/stylelogin.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&family=Press+Start+2P&family=Sansita+Swashed:wght@600&display=swap"
         rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
 </head>
 
 <body>
+    <div class="intro">
+        <img src="../img/logo-removebg-preview.png" alt="logo">
+        <p>VuiDuLich sẽ cung cấp thông các địa điểm du lịch ở Việt Nam.</p>
+    </div>
     <div class="animation">
-    <form action="./signup.html" method="GET">
-        <div>
-            <div class="login">
-                <div class="content">
-                    <div>
-                        <h1 id="title">Đăng Nhập</h1>
-                    </div>
-                    <div class="login1">
-                        <input type="text" placeholder="Tên đăng nhập">
-                    </div>
-                    <div class="login1">
-                        <input type="password" placeholder="Mật khẩu">
-                    </div>
-                    <div>
-                        <input class="butlog" type="Submit" value="Đăng Nhập">
-                    </div>
-                    <div class="asksignin">
-                        <a class="asksignin1" href="../html/signup.html">Chưa có tài khoản ? Đăng kí ?</a>
+        <form action="./signup.html" method="GET">
+            <div>
+                <div class="login">
+                    <div class="content">
+                        <div>
+                            <h1 id="title">Đăng Nhập</h1>
+                        </div>
+                        <div class="login1">
+                            <input type="text" placeholder="Tên đăng nhập">
+                        </div>
+                        <div class="login1">
+                            <input type="password" placeholder="Mật khẩu">
+                        </div>
+                        <div>
+                            <input class="butlog" type="Submit" value="Đăng Nhập">
+                        </div>
+                        <div class="asksignin">
+                            <a class="asksignin1" href="../html/signup.html">Chưa có tài khoản ? Đăng kí ?</a>
+                        </div>
                     </div>
                 </div>
+                <div class="hello">
+                    <h2><i>Rất hân hạnh được phục vụ các bạn !!!</i></h2>
+                </div>
             </div>
-        </div>
-    </form>
+        </form>
     </div>
 </body>
 
