--- a/html/login.html
+++ b/html/login.html
@@ -18,7 +18,7 @@
         <p>VuiDuLich sẽ cung cấp thông các địa điểm du lịch ở Việt Nam.</p>
     </div>
     <div class="animation">
-        <form action="./signup.html" method="GET">
+        <form action="./index.html" method="GET">
             <div>
                 <div class="login">
                     <div class="content">
