--- a/html/index.html
+++ b/html/index.html
@@ -54,7 +54,7 @@
                 </div>
                 <div class="menu2 menu22">
                     <a style="color: black; vertical-align: middle; animation: logout 1s; animation-iteration-count: infinite; animation-delay: 0.5;"
-                        href="">
+                        href="../html/login.html">
                         Đăng Xuất
                     </a>
                 </div>
