--- a/html/login.html
+++ b/html/login.html
@@ -10,6 +10,7 @@
         href="https://fonts.googleapis.com/css2?family=Lobster+Two:wght@700&family=Press+Start+2P&family=Sansita+Swashed:wght@600&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@600&display=swap" rel="stylesheet">
+    <script src="../js/login.js"></script>
 </head>
 
 <body>
@@ -18,32 +19,33 @@
         <p>VuiDuLich sẽ cung cấp thông các địa điểm du lịch ở Việt Nam.</p>
     </div>
     <div class="animation">
-        <form action="./index.html" method="GET">
-            <div>
-                <div class="login">
-                    <div class="content">
+        <div>
+            <div class="login">
+                <div class="content">
+                    <form id="loginform" method="GET" action="#">
                         <div>
                             <h1 id="title">Đăng Nhập</h1>
                         </div>
                         <div class="login1">
-                            <input type="text" placeholder="Tên đăng nhập">
+                            <input name="username" type="text" placeholder="Tên đăng nhập">
                         </div>
                         <div class="login1">
-                            <input type="password" placeholder="Mật khẩu">
+                            <input name="password" type="password" placeholder="Mật khẩu">
                         </div>
                         <div>
-                            <input class="butlog" type="Submit" value="Đăng Nhập">
+                            <input name="submit" class="butlog" type="Submit" value="Đăng Nhập">
                         </div>
                         <div class="asksignin">
                             <a class="asksignin1" href="../html/signup.html">Chưa có tài khoản ? Đăng kí ?</a>
                         </div>
-                    </div>
-                </div>
-                <div class="hello">
-                    <h2><i>Rất hân hạnh được phục vụ các bạn !!!</i></h2>
+                    </form><br>
+                    <p id="errorMsg" style="text-align: center;"></p>
                 </div>
             </div>
-        </form>
+            <div class="hello">
+                <h2><i>Rất hân hạnh được phục vụ các bạn !!!</i></h2>
+            </div>
+        </div>
     </div>
 </body>
 
