--- a/html/index.html
+++ b/html/index.html
@@ -32,8 +32,8 @@
                     </a>
                 </div>
                 <div class="head1 head13">
-                    <a href="">
-                        <i class="fas fa-comment-dots">&nbsp;Góp ý</i>
+                    <a href="https://www.facebook.com/VTD1709">
+                        <i class="fas fa-comment-dots">&nbsp;Nhắn Tin Góp Ý</i>
                     </a>
                 </div>
             </div>
