--- a/html/signup.html
+++ b/html/signup.html
@@ -88,7 +88,9 @@
             <br>
             <p style="text-align: center" id="errorMsg"></p>
         </div>
-        <div class="among"></div>
+        <div class="among">
+            <img src="../img/among move.gif" alt="among">
+        </div>
     </div>
 </body>
 
